<resources>
    <string name="app_name">NextChatApp</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>



    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>



    <!-- Strings related to register layout -->
    <string name="prompt_confirmed_password">Confirmed Password</string>
    <string name="prompt_username">User Name</string>
    <string name="action_register">Register</string>
    <string name="action_profile">Change Profile Picture</string>
    <string name="action_register_short">Register</string>
    <string name="error_password_is_different">The password does not match</string>
    <string name="dialog_title">Set Profile Picture</string>
    <string name="dialog_cancel">Cancel</string>

</resources>
